--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,30 @@
 {
-    "manifest_version": 3,
-    "name": "Recruitment Agency Info",
-    "version": "1.0",
-    "content_security_policy": {"extension_pages": "default-src 'self'; script-src 'self'; object-src 'none'; trusted-types default;"},
-    "description": "Displays ratings and comments for recruitment agencies based on data from an Excel file hosted on GitHub.",
-    "permissions": ["activeTab", "scripting"],
-    "content_scripts": [
-      {
-        "matches": ["<all_urls>"],
-        "js": [
-          "xlsx.full.min.js",
-          "dataLoader.js",
-          "content.js"
-        ],
-        "run_at": "document_end"
-      }
-    ]
-  }
-  
+  "manifest_version": 3,
+  "name": "Recruitment Agency Info",
+  "version": "1.0",
+  "description": "Displays ratings and comments for recruitment agencies based on data from a CSV text file hosted on GitHub.",
+  "permissions": [
+    "activeTab",
+    "scripting",
+    "https://raw.githubusercontent.com/"
+  ],
+  "content_security_policy": {
+    "extension_pages": "default-src 'self'; script-src 'self' 'unsafe-eval'; object-src 'none'; trusted-types default allow-duplicates;"
+  },
+  "web_accessible_resources": [
+    {
+      "resources": ["data.txt"],
+      "matches": ["<all_urls>"]
+    }
+  ],
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": [
+        "dataLoader.js",
+        "content.js"
+      ],
+      "run_at": "document_end"
+    }
+  ]
+}
