--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,27 @@
 {
   "manifest_version": 3,
-  "name": "Recruitment Agency Info",
-  "version": "1.3",
-  "description": "Displays ratings and comments for recruitment agencies based on data from a CSV text file hosted on GitHub.",
+  "name": "LinkedIn Recruitment Agency Info",
+  "version": "2.0",
+  "description": "Displays ratings and comments for recruitment agencies based on data from a CSV text file on LinkedIn pages.",
   "permissions": [
     "activeTab",
-    "scripting",
-    "https://raw.githubusercontent.com/"
+    "scripting"
+  ],
+  "host_permissions": [
+    "https://raw.githubusercontent.com/*"
   ],
   "content_security_policy": {
-    "extension_pages": "default-src 'self'; script-src 'self' 'unsafe-eval'; object-src 'none'; trusted-types default allow-duplicates;"
+    "extension_pages": "default-src 'self'; script-src 'self'; object-src 'none'; trusted-types default allow-duplicates;"
   },
   "web_accessible_resources": [
     {
       "resources": ["data.txt"],
-      "matches": ["<all_urls>"]
+      "matches": ["https://www.linkedin.com/*"]
     }
   ],
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["https://www.linkedin.com/*"],
       "js": [
         "dataLoader.js",
         "content.js"
