--- a/manifest.json
+++ b/manifest.json
@@ -1,32 +1,25 @@
 {
   "manifest_version": 3,
-  "name": "LinkedIn Recruitment Agency Info",
-  "version": "2.0",
-  "description": "Displays ratings and comments for recruitment agencies based on data from a CSV text file on LinkedIn pages.",
-  "permissions": [
-    "activeTab",
-    "scripting"
-  ],
-  "host_permissions": [
-    "https://raw.githubusercontent.com/*"
-  ],
-  "content_security_policy": {
-    "extension_pages": "default-src 'self'; script-src 'self'; object-src 'none'; trusted-types default allow-duplicates;"
-  },
-  "web_accessible_resources": [
-    {
-      "resources": ["data.txt"],
-      "matches": ["https://www.linkedin.com/*"]
+  "name": "Recruitment Agency Checker",
+  "version": "1.0",
+  "description": "Checks LinkedIn company names against a database and shows their rankings",
+  "permissions": ["activeTab", "storage"],
+  "host_permissions": ["*://*.linkedin.com/*"],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
     }
-  ],
+  },
   "content_scripts": [
     {
-      "matches": ["https://www.linkedin.com/*"],
-      "js": [
-        "dataLoader.js",
-        "content.js"
-      ],
-      "run_at": "document_end"
+      "matches": ["*://*.linkedin.com/*"],
+      "js": ["content.js"]
     }
-  ]
+  ],
+  "background": {
+    "service_worker": "background.js"
+  }
 }
