--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,14 @@
 {
   "manifest_version": 3,
   "name": "Recruitment Agency Checker",
-  "version": "1.3",
-  "description": "Checks LinkedIn company names against a database and shows their rankings",
-  "permissions": ["activeTab", "storage"],
-  "host_permissions": ["*://*.linkedin.com/*"],
+  "version": "1.4",
+  "description": "Checks LinkedIn company names against Firebase ratings database and shows their rankings",
+  "permissions": ["activeTab", "storage", "tabs"],
+  "host_permissions": [
+    "*://*.linkedin.com/*", 
+    "*://*.firebaseio.com/*", 
+    "*://*.web.app/*"
+  ],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
